# shell

./: .gitignore  .gitmodules  Makefile.am  README.md  autogen.sh  configure.ac
ezfork/: README.md  configure.ac
ezfork/src/: Makefile-LIBADD.inc  Makefile.am
restart/src/: Makefile-LIBADD.inc
src/: Makefile-LIBADD.inc  Makefile.am  ezfork.h  libezfork.c  libshell.c  libshell.pc.in  libshell_config  main.c  restart.c  restart.h  shell-test.pc.in  shell.c  shell.h  shell_test_config
